.metadata/.plugins/org.eclipse.cdt.ui/global-build.log
20:25:06 **** Incremental Build of configuration Debug for project Lab7 ****
make all 
Building file: ../src/main7.1.c
Invoking: MCU GCC Compiler
C:\Users\maxch\OneDrive\Desktop\MCSL\Lab7\Debug
arm-none-eabi-gcc -mcpu=cortex-m4 -mthumb -mfloat-abi=hard -mfpu=fpv4-sp-d16 -DSTM32 -DSTM32L4 -DSTM32L476RGTx -DNUCLEO_L476RG -DDEBUG -O0 -g3 -Wall -fmessage-length=0 -ffunction-sections -c -MMD -MP -MF"src/main7.1.d" -MT"src/main7.1.o" -o "src/main7.1.o" "../src/main7.1.c"
../src/main7.1.c: In function 'set_HCLK':
../src/main7.1.c:62:2: error: duplicate case value
  case 6:
  ^~~~
../src/main7.1.c:54:2: error: previously used here
  case 6:
  ^~~~
make: *** [src/main7.1.o] Error 1
src/subdir.mk:28: recipe for target 'src/main7.1.o' failed
20:25:25 **** Incremental Build of configuration Debug for project Lab7 ****
make all 
Building file: ../src/main7.1.c
Invoking: MCU GCC Compiler
C:\Users\maxch\OneDrive\Desktop\MCSL\Lab7\Debug
arm-none-eabi-gcc -mcpu=cortex-m4 -mthumb -mfloat-abi=hard -mfpu=fpv4-sp-d16 -DSTM32 -DSTM32L4 -DSTM32L476RGTx -DNUCLEO_L476RG -DDEBUG -O0 -g3 -Wall -fmessage-length=0 -ffunction-sections -c -MMD -MP -MF"src/main7.1.d" -MT"src/main7.1.o" -o "src/main7.1.o" "../src/main7.1.c"
Finished building: ../src/main7.1.c
 
Building target: Lab7.elf
Invoking: MCU GCC Linker
arm-none-eabi-gcc -mcpu=cortex-m4 -mthumb -mfloat-abi=hard -mfpu=fpv4-sp-d16 -T"C:\Users\maxch\OneDrive\Desktop\MCSL\Lab7\LinkerScript.ld" -Wl,-Map=output.map -Wl,--gc-sections -o "Lab7.elf" @"objects.list"   -lm
Finished building target: Lab7.elf
 
make --no-print-directory post-build
Generating binary and Printing size information:
arm-none-eabi-objcopy -O binary "Lab7.elf" "Lab7.bin"
arm-none-eabi-size "Lab7.elf"
   text	   data	    bss	    dec	    hex	filename
   1864	   1080	   1092	   4036	    fc4	Lab7.elf
 
20:26:05 **** Incremental Build of configuration Debug for project Lab7 ****
make all 
Building file: ../src/main7.1.c
Invoking: MCU GCC Compiler
C:\Users\maxch\OneDrive\Desktop\MCSL\Lab7\Debug
arm-none-eabi-gcc -mcpu=cortex-m4 -mthumb -mfloat-abi=hard -mfpu=fpv4-sp-d16 -DSTM32 -DSTM32L4 -DSTM32L476RGTx -DNUCLEO_L476RG -DDEBUG -O0 -g3 -Wall -fmessage-length=0 -ffunction-sections -c -MMD -MP -MF"src/main7.1.d" -MT"src/main7.1.o" -o "src/main7.1.o" "../src/main7.1.c"
Finished building: ../src/main7.1.c
 
Building target: Lab7.elf
Invoking: MCU GCC Linker
arm-none-eabi-gcc -mcpu=cortex-m4 -mthumb -mfloat-abi=hard -mfpu=fpv4-sp-d16 -T"C:\Users\maxch\OneDrive\Desktop\MCSL\Lab7\LinkerScript.ld" -Wl,-Map=output.map -Wl,--gc-sections -o "Lab7.elf" @"objects.list"   -lm
Finished building target: Lab7.elf
 
make --no-print-directory post-build
Generating binary and Printing size information:
arm-none-eabi-objcopy -O binary "Lab7.elf" "Lab7.bin"
arm-none-eabi-size "Lab7.elf"
   text	   data	    bss	    dec	    hex	filename
   1872	   1080	   1092	   4044	    fcc	Lab7.elf
 
20:27:15 **** Incremental Build of configuration Debug for project Lab7 ****
make all 
make: Nothing to be done for 'all'.
20:29:50 **** Incremental Build of configuration Debug for project Lab7 ****
make all 
Building file: ../src/main7.1.c
Invoking: MCU GCC Compiler
C:\Users\maxch\OneDrive\Desktop\MCSL\Lab7\Debug
arm-none-eabi-gcc -mcpu=cortex-m4 -mthumb -mfloat-abi=hard -mfpu=fpv4-sp-d16 -DSTM32 -DSTM32L4 -DSTM32L476RGTx -DNUCLEO_L476RG -DDEBUG -O0 -g3 -Wall -fmessage-length=0 -ffunction-sections -c -MMD -MP -MF"src/main7.1.d" -MT"src/main7.1.o" -o "src/main7.1.o" "../src/main7.1.c"
Finished building: ../src/main7.1.c
 
Building target: Lab7.elf
Invoking: MCU GCC Linker
arm-none-eabi-gcc -mcpu=cortex-m4 -mthumb -mfloat-abi=hard -mfpu=fpv4-sp-d16 -T"C:\Users\maxch\OneDrive\Desktop\MCSL\Lab7\LinkerScript.ld" -Wl,-Map=output.map -Wl,--gc-sections -o "Lab7.elf" @"objects.list"   -lm
Finished building target: Lab7.elf
 
make --no-print-directory post-build
Generating binary and Printing size information:
arm-none-eabi-objcopy -O binary "Lab7.elf" "Lab7.bin"
arm-none-eabi-size "Lab7.elf"
   text	   data	    bss	    dec	    hex	filename
   1884	   1080	   1092	   4056	    fd8	Lab7.elf
 
20:33:01 **** Incremental Build of configuration Debug for project Lab7 ****
make all 
Building file: ../src/main7.3.c
Invoking: MCU GCC Compiler
C:\Users\maxch\OneDrive\Desktop\MCSL\Lab7\Debug
arm-none-eabi-gcc -mcpu=cortex-m4 -mthumb -mfloat-abi=hard -mfpu=fpv4-sp-d16 -DSTM32 -DSTM32L4 -DSTM32L476RGTx -DNUCLEO_L476RG -DDEBUG -O0 -g3 -Wall -fmessage-length=0 -ffunction-sections -c -MMD -MP -MF"src/main7.3.d" -MT"src/main7.3.o" -o "src/main7.3.o" "../src/main7.3.c"
Finished building: ../src/main7.3.c
 
Building target: Lab7.elf
Invoking: MCU GCC Linker
arm-none-eabi-gcc -mcpu=cortex-m4 -mthumb -mfloat-abi=hard -mfpu=fpv4-sp-d16 -T"C:\Users\maxch\OneDrive\Desktop\MCSL\Lab7\LinkerScript.ld" -Wl,-Map=output.map -Wl,--gc-sections -o "Lab7.elf" @"objects.list"   -lm
Finished building target: Lab7.elf
 
make --no-print-directory post-build
Generating binary and Printing size information:
arm-none-eabi-objcopy -O binary "Lab7.elf" "Lab7.bin"
arm-none-eabi-size "Lab7.elf"
   text	   data	    bss	    dec	    hex	filename
   3648	   1080	   1092	   5820	   16bc	Lab7.elf
 
20:35:00 **** Incremental Build of configuration Debug for project Lab7 ****
make all 
Building file: ../src/main7.3.c
Invoking: MCU GCC Compiler
C:\Users\maxch\OneDrive\Desktop\MCSL\Lab7\Debug
arm-none-eabi-gcc -mcpu=cortex-m4 -mthumb -mfloat-abi=hard -mfpu=fpv4-sp-d16 -DSTM32 -DSTM32L4 -DSTM32L476RGTx -DNUCLEO_L476RG -DDEBUG -O0 -g3 -Wall -fmessage-length=0 -ffunction-sections -c -MMD -MP -MF"src/main7.3.d" -MT"src/main7.3.o" -o "src/main7.3.o" "../src/main7.3.c"
Finished building: ../src/main7.3.c
 
Building target: Lab7.elf
Invoking: MCU GCC Linker
arm-none-eabi-gcc -mcpu=cortex-m4 -mthumb -mfloat-abi=hard -mfpu=fpv4-sp-d16 -T"C:\Users\maxch\OneDrive\Desktop\MCSL\Lab7\LinkerScript.ld" -Wl,-Map=output.map -Wl,--gc-sections -o "Lab7.elf" @"objects.list"   -lm
Finished building target: Lab7.elf
 
make --no-print-directory post-build
Generating binary and Printing size information:
arm-none-eabi-objcopy -O binary "Lab7.elf" "Lab7.bin"
arm-none-eabi-size "Lab7.elf"
   text	   data	    bss	    dec	    hex	filename
   3652	   1080	   1092	   5824	   16c0	Lab7.elf
 
20:35:35 **** Incremental Build of configuration Debug for project Lab7 ****
make all 
Building file: ../src/main7.3.c
Invoking: MCU GCC Compiler
C:\Users\maxch\OneDrive\Desktop\MCSL\Lab7\Debug
arm-none-eabi-gcc -mcpu=cortex-m4 -mthumb -mfloat-abi=hard -mfpu=fpv4-sp-d16 -DSTM32 -DSTM32L4 -DSTM32L476RGTx -DNUCLEO_L476RG -DDEBUG -O0 -g3 -Wall -fmessage-length=0 -ffunction-sections -c -MMD -MP -MF"src/main7.3.d" -MT"src/main7.3.o" -o "src/main7.3.o" "../src/main7.3.c"
Finished building: ../src/main7.3.c
 
Building target: Lab7.elf
Invoking: MCU GCC Linker
arm-none-eabi-gcc -mcpu=cortex-m4 -mthumb -mfloat-abi=hard -mfpu=fpv4-sp-d16 -T"C:\Users\maxch\OneDrive\Desktop\MCSL\Lab7\LinkerScript.ld" -Wl,-Map=output.map -Wl,--gc-sections -o "Lab7.elf" @"objects.list"   -lm
Finished building target: Lab7.elf
 
make --no-print-directory post-build
Generating binary and Printing size information:
arm-none-eabi-objcopy -O binary "Lab7.elf" "Lab7.bin"
arm-none-eabi-size "Lab7.elf"
   text	   data	    bss	    dec	    hex	filename
   3656	   1080	   1092	   5828	   16c4	Lab7.elf
 
